# r-ecosystem

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  test.rest
examples/: axum_serde.rs  axum_tracing.rs  builder.rs  bytes.rs  chat.rs  enums.rs  err.rs  minginx.rs  more.rs  serde.rs  shortener.rs  threads.rs
src/: error.rs  main.rs
