[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
once_cell = "1.20.2"

[dev-dependencies]
axum = { version = "0.7.9", features = ["http2", "query", "tracing"] }
serde_json = "1.0.133"
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "rt", "macros"] }
opentelemetry = "0.27.1"
opentelemetry-otlp = { version = "0.27.0", features = ["tonic"] }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
